[package]
name = "to-whom-does-this-wallet-belong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = {version = "0.20.3", features = ["rand"] }
anyhow = "1.0"
web3 = "0.16.0"
tokio = "1.32.0"
fltk = "1.4.12"
doxygen-rs = "0.4.2"
